--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,3 +1,7 @@
 {% extends "base.html" %}
 {% block body %}
+  <header>
+    <h1>Bloger's Block</h1>
+    <p>Welcome home, this is your block.</p>
+  </header>
 {% endblock body %}
