--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -3,3 +3,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+header {
+  height: 60vh;
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: url("../images/blog.jpg") no-repeat center center/cover;
+}
