--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -12,3 +12,9 @@ header {
   flex-direction: column;
   background: linear-gradient(rgba(109,33,60, 0.5), rgba(109,33,60, 0.5)),url("../images/blog.jpg") no-repeat center center/cover;
 }
+
+/* Text Styles */
+header h1, header p {
+  color: #fff;
+  text-align: center;
+}
