--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -14,6 +14,7 @@ header {
   background: linear-gradient(rgba(109,33,60, 0.5), rgba(109,33,60, 0.5)),url("../images/blog.jpg") no-repeat center center/cover;
   color: #fff;
   text-align: center;
+  font-family: "Montserrat";
 }
 
 /* Text Styles */
