--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,7 @@
     <title>Bloggers Block</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg">
       <a class="navbar-brand" href="#">Bloger's Block</a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
