--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -25,7 +25,7 @@ header {
   flex-direction: column;
   background: linear-gradient(rgba(109, 33, 60, 0.7), rgba(109, 33, 60, 0.7)),
     url("../images/blog.jpg") no-repeat center center/cover;
-  color: #fff;
+  color: #FAFF70;
   text-align: center;
   font-family: "Montserrat";
 }
