--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,7 +14,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#"
+            <a class="nav-link" href="{{url_for('about')}}"
               >About <span class="sr-only">(current)</span></a
             >
           </li>
