--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,7 +19,7 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" aria-disabled="true">Sign Up</a>
+            <a class="nav-link" href="{{url_for('signup')}}" aria-disabled="true">Sign Up</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#" aria-disabled="true">Sign In</a>
