--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,7 +22,7 @@
             <a class="nav-link" href="{{url_for('signup')}}" aria-disabled="true">Sign Up</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" aria-disabled="true">Sign In</a>
+            <a class="nav-link" href="{{url_for('signin')}}" aria-disabled="true">Sign In</a>
           </li>
         </ul>
       </div>
