--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg">
-      <a class="navbar-brand" href="#">Bloger's Block</a>
+      <a class="navbar-brand" href="{{url_for('/home')}}">Bloger's Block</a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
