--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
 {% block body %}
-  <p>This is the signup page</p>
+  <form action="">
+    <h3>Create an Account</h3>
+  </form>
 {% endblock body %}
