Implemented sign up button in the signup form

--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -18,5 +18,6 @@
       {{form.confirm_password.label(class="input-label")}}
       {{form.confirm_password(class="form-control")}}
     </div>
+    {{form.submit(class="btn btn-outline-danger")}}
   </form>
 {% endblock body %}
