--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -42,3 +42,16 @@ nav a {
 nav a:hover {
   color: #fff;
 }
+
+/* Form Styling */
+form {
+  width: 30%;
+  margin: 0 auto;
+}
+
+form h3 {
+  padding: 1rem 0;
+  margin: 3rem 0;
+  border-bottom: 2px solid #6D213C;
+  
+}
