--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block body %}
-  <form action="">
+  <form method="POST" action="">
     <h3>Create an Account</h3>
     <div class="form-group">
       {{form.username.label(class="input-label")}}
