--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -4,19 +4,63 @@
     <h3>Create an Account</h3>
     <div class="form-group">
       {{form.username.label(class="input-label")}}
-      {{form.username(class="form-control")}}
+      {% if form.username.errors %}
+        {{form.username(class="form-control is-invalid")}}
+        <div class="invalid-feedback">
+          {% for error in collection in form.username.errors %}
+              <span>{{ error }}</span>
+          {% endfor %}
+          
+        </div>
+      {% else %}
+        {{form.username(class="form-control")}}
+      {% endif %}
+      
     </div>
     <div class="form-group">
       {{form.email.label(class="input-label")}}
-      {{form.email(class="form-control")}}
+      {{form.email.label(class="input-label")}}
+      {% if form.email.errors %}
+        {{form.email(class="form-control is-invalid")}}
+        <div class="invalid-feedback">
+          {% for error in collection in form.email.errors %}
+              <span>{{ error }}</span>
+          {% endfor %}
+          
+        </div>
+      {% else %}
+        {{form.email(class="form-control")}}
+      {% endif %}
     </div>
     <div class="form-group">
       {{form.password.label(class="input-label")}}
-      {{form.password(class="form-control")}}
+      {{form.password.label(class="input-label")}}
+      {% if form.password.errors %}
+        {{form.password(class="form-control is-invalid")}}
+        <div class="invalid-feedback">
+          {% for error in collection in form.password.errors %}
+              <span>{{ error }}</span>
+          {% endfor %}
+          
+        </div>
+      {% else %}
+        {{form.password(class="form-control")}}
+      {% endif %}
     </div>
     <div class="form-group">
       {{form.confirm_password.label(class="input-label")}}
-      {{form.confirm_password(class="form-control")}}
+      {{form.username.label(class="input-label")}}
+      {% if form.confirm_password.errors %}
+        {{form.c(class="form-control is-invalid")}}
+        <div class="invalid-feedback">
+          {% for error in collection in form.username.errors %}
+              <span>{{ error }}</span>
+          {% endfor %}
+          
+        </div>
+      {% else %}
+        {{form.confirm_password(class="form-control")}}
+      {% endif %}
     </div>
     {{form.submit(class="btn btn-outline-danger")}}
   </form>
