--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -53,7 +53,7 @@
       {% if form.confirm_password.errors %}
         {{form.confirm_password(class="form-control is-invalid")}}
         <div class="invalid-feedback">
-          {% for error in collection in form.username.errors %}
+          {% for error in form.username.errors %}
               <span>{{ error }}</span>
           {% endfor %}
           
