--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -18,23 +18,10 @@
     <title>Bloggers Block</title>
   </head>
   <body>
-    {% with messages = get_flashed_messages(with_categories=true) %} {% if
-    messages %}
-    <div class="flashes">
-      {% for category, message in messages %}
-      <div class="alert alert-{{ category }}">{{ message }}</div>
-      {% endfor %}
-    </div>
-    {% endif %} {% endwith %}
-    <nav class="navbar navbar-expand-lg">
-      <a class="navbar-brand" href="{{url_for('home')}}">Bloger's Block</a>
+        <nav class="navbar navbar-expand-lg">
+      <a class="navbar-brand" href="{{url_for('home')}}">Blogger's Block</a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="{{url_for('about')}}"
-              >About <span class="sr-only">(current)</span></a
-            >
-          </li>
           <li class="nav-item">
             <a
               class="nav-link"
@@ -54,6 +41,15 @@
         </ul>
       </div>
     </nav>
+    {% with messages = get_flashed_messages(with_categories=true) %} {% if
+      messages %}
+      <div class="flashes">
+        {% for category, message in messages %}
+        <div class="alert alert-{{ category }}">{{ message }}</div>
+        {% endfor %}
+      </div>
+      {% endif %} {% endwith %}
+  
     {% block body%} {% endblock %}
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
