--- a/blog/templates/signin.html
+++ b/blog/templates/signin.html
@@ -1,19 +1,20 @@
 {% extends "base.html" %}
 {% block body %}
-  <form method="POST" action="">
-    <h3>Create an Account</h3>
+  <form method="post" action="">
+    {{form.hidden_tag()}}
+    <h3>Sign In</h3>
     <div class="form-group">
-      {{form.username.label(class="input-label")}}
-      {% if form.username.errors %}
-        {{form.username(class="form-control is-invalid")}}
+      {{form.email.label(class="input-label")}}
+      {% if form.email.errors %}
+        {{form.email(class="form-control is-invalid")}}
         <div class="invalid-feedback">
-          {% for error in collection in form.username.errors %}
+          {% for error in form.email.errors %}
               <span>{{ error }}</span>
           {% endfor %}
           
         </div>
       {% else %}
-        {{form.username(class="form-control")}}
+        {{form.email(class="form-control")}}
       {% endif %}
       
     </div>
@@ -24,7 +25,7 @@
       {% if form.password.errors %}
         {{form.password(class="form-control is-invalid")}}
         <div class="invalid-feedback">
-          {% for error in collection in form.password.errors %}
+          {% for error in form.password.errors %}
               <span>{{ error }}</span>
           {% endfor %}
           
