--- a/blog/templates/signup.html
+++ b/blog/templates/signup.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
 {% block body %}
   <form method="POST" action="">
+    {{form.hidden_tag()}}
     <h3>Create an Account</h3>
     <div class="form-group">
       {{form.username.label(class="input-label")}}
       {% if form.username.errors %}
         {{form.username(class="form-control is-invalid")}}
         <div class="invalid-feedback">
-          {% for error in collection in form.username.errors %}
+          {% for error in form.username.errors %}
               <span>{{ error }}</span>
           {% endfor %}
           
@@ -23,7 +24,7 @@
       {% if form.email.errors %}
         {{form.email(class="form-control is-invalid")}}
         <div class="invalid-feedback">
-          {% for error in collection in form.email.errors %}
+          {% for error in form.email.errors %}
               <span>{{ error }}</span>
           {% endfor %}
           
