--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -18,39 +18,51 @@
     <title>Bloggers Block</title>
   </head>
   <body>
-        <nav class="navbar navbar-expand-lg">
-      <a class="navbar-brand" href="{{url_for('home')}}">Blogger's Block</a>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              href="{{url_for('signup')}}"
-              aria-disabled="true"
-              >Sign Up</a
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+      <div class="container">
+        <a class="navbar-brand mr-4" href="/"></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarToggle"
+          aria-controls="navbarToggle"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarToggle">
+          <div class="navbar-nav mr-auto">
+            <a class="nav-item nav-link" href="/">Blogger Block</a>
+            <!-- <a class="nav-item nav-link" href="/about">About</a> -->
+          </div>
+          <!-- Navbar Right Side -->
+          <div class="navbar-nav">
+            {% if current_user.is_authenticated %}
+            <a class="nav-item nav-link" href="{{url_for('new_post')}}"
+              >New Blog</a
             >
-          </li>
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              href="{{url_for('signin')}}"
-              aria-disabled="true"
-              >Sign In</a
-            >
-          </li>
-        </ul>
+            <a class="nav-item nav-link" href="/profile">Profile</a>
+            <a class="nav-item nav-link" href="/logout">Sign Out</a>
+
+            {% else %}
+            <a class="nav-item nav-link" href="/signin">Sign in</a>
+            <a class="nav-item nav-link" href="/signup">Sign Up</a>
+
+            {%endif%}
+          </div>
+        </div>
       </div>
     </nav>
     {% with messages = get_flashed_messages(with_categories=true) %} {% if
-      messages %}
-      <div class="flashes">
-        {% for category, message in messages %}
-        <div class="alert alert-{{ category }}">{{ message }}</div>
-        {% endfor %}
-      </div>
-      {% endif %} {% endwith %}
-  
-    {% block body%} {% endblock %}
+    messages %}
+    <div class="flashes">
+      {% for category, message in messages %}
+      <div class="alert alert-{{ category }}">{{ message }}</div>
+      {% endfor %}
+    </div>
+    {% endif %} {% endwith %} {% block body%} {% endblock %}
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
