--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -34,7 +34,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarToggle">
           <div class="navbar-nav mr-auto">
-            <a class="nav-item nav-link" href="/">Blogger Block</a>
+            <a class="nav-item nav-link" href="/">Blogger's Block</a>
             <!-- <a class="nav-item nav-link" href="/about">About</a> -->
           </div>
           <!-- Navbar Right Side -->
